--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@ form Button{
   border-radius: 20px;
   border-color: #15225e;
   height: fit-content;
-  width: 20%;
+  width: 30%;
   margin: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -214,11 +214,12 @@ form Button{
 .Weather .MuiPaper-root{
   padding-top: 10px;
   background-color: #15225e;
-  border-radius: 10% !important;
   box-shadow: 0px 0px 5px #15225e !important;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .Weather .MuiPaper-root h2{
@@ -247,6 +248,8 @@ form Button{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 
